--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "date-fns": "^2.11.0",
+    "js-cookie": "^2.2.1",
+    "material-table": "^1.57.2",
     "material-ui-search-bar": "^1.0.0-beta.14",
     "react": "^16.13.0",
+    "react-barcode": "^1.4.0",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-to-print": "^2.6.3",
     "react-window": "^1.8.5",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
