--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-scripts": "3.4.0",
     "react-window": "^1.8.5",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "xlsx": "^0.15.6"
   },
   "scripts": {
     "start": "react-scripts start",
