--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-window": "^1.8.5",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "use-debounce": "^3.4.1",
     "xlsx": "^0.15.6"
   },
   "scripts": {
