--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "js-cookie": "^2.2.1",
     "material-table": "^1.57.2",
     "material-ui-search-bar": "^1.0.0-beta.14",
-    "react": "^16.13.0",
+    "react": "^16.13.1",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
