--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "js-cookie": "^2.2.1",
     "material-table": "^1.57.2",
     "material-ui-search-bar": "^1.0.0-beta.14",
+    "notistack": "^0.9.9",
     "react": "^16.13.1",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.0",
