--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "material-ui-search-bar": "^1.0.0-beta.14",
     "notistack": "^0.9.9",
     "react": "^16.13.1",
+    "react-barcode": "^1.4.0",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-to-print": "^2.6.3",
     "react-window": "^1.8.5",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
