clean up electron build

--- a/package.json
+++ b/package.json
@@ -2,37 +2,8 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@date-io/date-fns": "^1.3.13",
-    "@material-ui/core": "^4.9.7",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.46",
-    "@material-ui/pickers": "^3.2.10",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.19.2",
-    "connected-react-router": "^6.8.0",
-    "date-fns": "^2.11.0",
-    "history": "^4.10.1",
-    "js-cookie": "^2.2.1",
-    "material-table": "^1.57.2",
-    "material-ui-search-bar": "^1.0.0-beta.14",
-    "notistack": "^0.9.9",
-    "react": "^16.13.1",
-    "react-barcode": "^1.4.0",
-    "react-copy-to-clipboard": "^5.0.2",
-    "react-dom": "^16.13.0",
-    "react-redux": "^7.2.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0",
-    "react-to-print": "^2.6.3",
-    "react-window": "^1.8.5",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "use-debounce": "^3.4.1",
-    "xlsx": "^0.15.6"
-  },
+  "description": "ERP system for ipsmold",
+  "dependencies": {},
   "homepage": "./",
   "main": "src/electron-starter.js",
   "scripts": {
@@ -65,19 +36,49 @@
     "electron": "^8.2.3",
     "electron-builder": "^22.5.1",
     "foreman": "^3.0.1",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "@date-io/date-fns": "^1.3.13",
+    "@material-ui/core": "^4.9.7",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/pickers": "^3.2.10",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
+    "connected-react-router": "^6.8.0",
+    "date-fns": "^2.11.0",
+    "history": "^4.10.1",
+    "material-table": "^1.57.2",
+    "material-ui-search-bar": "^1.0.0-beta.14",
+    "notistack": "^0.9.9",
+    "react": "^16.13.1",
+    "react-barcode": "^1.4.0",
+    "react-dom": "^16.13.0",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.0",
+    "react-to-print": "^2.6.3",
+    "react-window": "^1.8.5",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "xlsx": "^0.15.6"
   },
   "author": {
-    "name": "Your Name",
-    "email": "your.email@domain.com",
-    "url": "https://your-website.com"
+    "name": "wudaown",
+    "email": "wudaown@gmail.com",
+    "url": "https://github.com/wudaown"
   },
   "build": {
-    "appId": "com.my-website.my-app",
-    "productName": "MyApp",
-    "copyright": "Copyright © 2019 ${author}",
+    "appId": "com.ipsmold.ErP",
+    "productName": "ErP",
+    "copyright": "Copyright © 2020 ${author}",
     "mac": {
       "category": "public.app-category.utilities"
+    },
+    "win": {
+      "icon": "assets/win.ico",
+      "artifactName": "${productName}-Setup-${version}.${ext}",
+      "publisherName": "${author}"
     },
     "files": [
       "src/electron-starter.js",
