--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "date-fns": "^2.11.0",
     "electron": "^8.2.3",
     "electron-builder": "^22.5.1",
+    "element-react": "^1.4.34",
+    "element-theme-default": "^1.4.13",
     "foreman": "^3.0.1",
     "history": "^4.10.1",
     "material-table": "^1.57.2",
@@ -54,6 +56,7 @@
     "react": "^16.13.1",
     "react-barcode": "^1.4.0",
     "react-dom": "^16.13.0",
+    "react-hot-loader": "^4.12.21",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
