migration to antd design

--- a/package.json
+++ b/package.json
@@ -40,14 +40,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "antd": "^4.2.0",
     "axios": "^0.19.2",
     "connected-react-router": "^6.8.0",
     "cross-env": "^7.0.2",
     "date-fns": "^2.11.0",
     "electron": "^8.2.3",
     "electron-builder": "^22.5.1",
-    "element-react": "^1.4.34",
-    "element-theme-default": "^1.4.13",
     "foreman": "^3.0.1",
     "history": "^4.10.1",
     "material-table": "^1.57.2",
