purchase order page migrated, migrating rfq page

--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "homepage": "./",
   "main": "src/electron-starter.js",
   "scripts": {
-    "start": "cross-env BROWSER=none&&react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "cross-env BROWSER=none&&react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "electron": "electron .",
     "dev": "nf start -p 3000",
@@ -43,17 +43,22 @@
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.2.0",
     "axios": "^0.19.2",
+    "babel-plugin-import": "^1.13.0",
     "connected-react-router": "^6.8.0",
     "cross-env": "^7.0.2",
+    "customize-cra": "^0.9.1",
     "date-fns": "^2.11.0",
     "electron": "^8.2.3",
     "electron-builder": "^22.5.1",
     "foreman": "^3.0.1",
     "history": "^4.10.1",
+    "less": "^3.11.1",
+    "less-loader": "^5.0.0",
     "material-table": "^1.57.2",
     "material-ui-search-bar": "^1.0.0-beta.14",
     "notistack": "^0.9.9",
     "react": "^16.13.1",
+    "react-app-rewired": "^2.1.6",
     "react-barcode": "^1.4.0",
     "react-dom": "^16.13.0",
     "react-hot-loader": "^4.12.21",
