--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "description": "ERP system for ipsmold",
   "dependencies": {
-    "antd": "^4.2.0"
+    "antd-editabletable": "0.0.7"
   },
   "homepage": "./",
   "main": "src/electron-starter.js",
@@ -43,7 +43,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "antd": "^4.2.0",
+    "antd": "^4.5.2",
     "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
     "connected-react-router": "^6.8.0",
